# py3

./: .gitignore  README.md  data.py  myf.py  myflask.py  python3.py  requirements.txt  word.txt
advanced/: myfacker.py  mypanda.py  mypymysql.py  mytxt.py
app/: factory.py  main.py
base/: 1.py  2.py  3.py  4.py  anno.py  cookies.txt  crawlerphoto.py  crawlerword.py  data.csv  download.py  getPhoto.py  hello.py  hello.spec  json2.py  liepin_dict_handle.py  myBeautifulSoup4.py  mybs4.py  mychart.py  mydbutils1.py  mydbutils2.py  mygoose3.py  myhtml.py  myjson.py  myocr.py  mypackage.py  mypeewee.py  myqr.py  myre.py  myrequests.py  myselenium.py  myurllib.py  myvoa.py  myyingyuetai.py  simulateLogin.py  test.py  txnews.py  voa-pc.py
base_no/: 1.py  config.ini  data.csv  db.py  jdbc.py  mafengwoCookies.txt  music_list.txt  myBeautifulSoup4.py  mySessionAndCookie.py  mybackup.py  myconfigparser.py  mydbutils2.py  mypinyin.py  mypq.py  myqr.py  mytqdm.py  myurllib.py  myvoa2.py  pic2word.py
code/: downBili.py  myapi.py  myre.py  mytemp.py  mythread.py  run-example.py  test.py  test2.py  youzi.py  youzi4.txt
code/demo1/: pyproject.toml
code/demo1/src/demo1/hello/: cmdline.py
code/demo1/tests/hello/: test_cmdline.py
code/demo1/tests/sample_project/: test_cmdline.py
code/hello/: pyproject.toml
code/hello/src/file/: classify_files.py  operate_file.py  valid_files.py
code/hello/src/hello/: Dockerfile  base.py  cover-api.py  coverapi.py  docker-compose.yml  main.py  meili.py
documents/: 1.计算机语言和python语言.md  10.序列化.md  2.py的包结构与模块.md  3.py的程序结构.md  4.基础数据结构.md  (+25 more)
(+149 files in other folders)
