[project]
name = "demo1"
version = "0.1.0"
description = ""
authors = [
    {name = "jxp",email = "<jxp@163.com>"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "demo1", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
