[project]
name = "hello"
version = "0.1.0"
description = ""
authors = [
    {name = "jiaxiaopeng",email = "<111@163.com>"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "meilisearch (>=0.36.0,<0.37.0)"
]

[tool.poetry]
packages = [{include = "hello", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
